    * Version 0.9.3
	
2004-02-03 Damien <ddouxchamps@users.sf.net>
    * fixed bpp issue in _dc1394_basic_format7_setup
    * fixed missing *4 in boundary check of GetConfigROMTaggedRegister

2004-02-04 Kristoffer Delforge <delforge@users.sf.net>
    * fixed uninitialized values in dc1394camerahandle_t
    * changed 0xffff to DC1394_NO_CAMERA in dc1394_get_sorted_camera_nodes
    * changed some calue by &value[0] in dc1394_get_camera_info
    * removed unnecessary '& 0xFFFF' in dc1394_get_camera_info
    * simplify FEATURE_TRIGGER check in dc1394_get_camera_feature
    * added printf warning before return in dc1394_print_feature
    * replaced '== DC1394_FAILURE' by '!= DC1394_SUCCESS'
    * removed FORMAT_STILL_IMAGE definition to 390, it messes up with the
      number of available formats
    * replaced a 0x1<<31 by ON_VALUE

2004-02-04 Damien <ddouxchamps@users.sf.net>
    * apply patches from Tim Evers and Johann Schoonees

2004-02-04 Kristoffer Delforge <delforge@users.sf.net>
    * fixed trigger polarity bug
    * fixed default format7 csr value bug (was "-1" instead of the new "0")
    * revert FORMAT_STILL_IMAGE change.
	
2004-02-06 Kristoffer Delforge <delforge@users.sf.net>
    * use FEATURE_TO_ABS_VALUE_OFFSET in QueryAbsoluteCSROffset
    * check that mode id is within boundaries in GetCameraFormat7Register
      and SetCameraFormat7Register
    * moved declarations to beginning of the function
    * removed unnecessary 'if's.
    * removed unnecessary 'else's.
	
2004-02-10 Kristoffer Delforge <delforge@users.sf.net>
    * dc1394_dma_setup_capture uses F7 setup if necessary. Image parameters
      are default to QUERY_FROM_CAMERA, as in dc1394_setup_capture
    * remove duplicate "cams[i].dma_last_buffer = last_buffer_orig;" in
      dc1394_capture.c
    * moved declarations to the beginning of functions.
	
2004-02-16 Damien <ddouxchamps@users.sf.net>
    * fixed an endianess issue. Thanks to Tim Canham for spotting this bug.